--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    
+    <header>
+    <div class="container">
+        <h1 class="header-text">All Thinks Are Possible If You believe</h1>
+        <p class="header-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <button class="button">Contact Us</button>
+    </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
