--- a/index.html
+++ b/index.html
@@ -1,24 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New year New me</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <script src="https://kit.fontawesome.com/6f620836b4.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
     <header>
-    <div class="container">
+      <div class="container">
         <h1 class="header-text">All Thinks Are Possible If You believe</h1>
-        <p class="header-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p class="header-text">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
         <button class="button">Contact Us</button>
-    </div>
+      </div>
     </header>
-    <main>
-
+    <main class="main-container">
+      <div class="section-container">
+        <section>
+          <img src="./images/person.png" alt="" />
+        </section>
+        <section class="section-container-text">
+            <h3>My failures of previous year</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <p><i class="fa-solid fa-check" style="color: #63E6BE;"></i> Contrary to popular belief, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #63E6BE;"></i> Contrary to popular, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #63E6BE;"></i> Contrary to popular, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #63E6BE;"></i> Contrary to popular belief, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #63E6BE;"></i> Contrary to popular, is not simply.</p>
+        </section>
+      </div>
+      <section class="plan-section">
+       <h3 class="plan-header">My Plans</h3>
+       <div class="plan-items">
+         <div class="plan-item">
+          <img src="./images/icons/web.png" alt="" class="plan-icon">
+          <h4 class="plan-item-text">Web Development</h4>
+          <p class="plan-item-description">I want to start</p>
+         </div>
+         <div class="plan-item">
+          <img src="./images/icons/js.png" alt="" class="plan-icon">
+          <h4 class="plan-item-text">Javascipt</h4>
+          <p class="plan-item-description">I want to learn</p>
+         </div>
+         <div class="plan-item">
+          <img src="./images/icons/smoke.png" alt="" class="plan-icon">
+          <h4 class="plan-item-text">Smoking Habit</h4>
+          <p class="plan-item-description">I want to end</p>
+         </div>
+         <div class="plan-item">
+          <img src="./images/icons/ecom.png" alt="" class="plan-icon">
+          <h4 class="plan-item-text">Ecommerce</h4>
+          <p class="plan-item-description">I want to develop</p>
+         </div>
+       </div>
+      </section>
+      <section class="final-section">
+      <div class="final-section-container">
+           <div>
+            <h3 class="final-section-container-text">Awlays keep a positive mindset</h3>
+           <button class="button">Call Now</button>
+           </div>
+      </div>
+      </section>
     </main>
     <footer>
-
+      <div class="part-1">
+        <h3 class="part-1-text">Future</h3>
+        <p class="part-1-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p>Email : info@gmail.com</p>
+        <p>Phone : 01500 00 00 00</p>
+        <p><i class="fa-brands fa-youtube"></i> <i class="fa-brands fa-whatsapp"></i> <i class="fa-brands fa-square-twitter"></i></p>
+      </div>
+      <div class="part-2">
+         <h3 class="part-1-text">Subscribe</h3>
+        <input class="email" type="email" placeholder="Enter your email">
+        <input class="submit" type="submit" value="Submit">
+      </div>
     </footer>
-</body>
+  </body>
 </html>
